<resources>
    <string name="app_name">My Application</string>
    <string name="charts">Charts</string>
    <string name="chlorine">Chlorine</string>
    <string name="chlorine_data">Chlorine data</string>
    <string name="ph">pH</string>
    <string name="ph_data">pH data</string>
    <string name="readings">Readings</string>
    <string name="temperature">TEMPERATURE</string>
    <string name="water_level_data">Water Level data</string>
    <string name="water_level">WATER LEVEL</string>
    <string name="temperature_data">Temperature data</string>
    <string name="home">home</string>
    <string name="profile">profile</string>
    <string name="settings">notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="maintenance_tasks">Maintenance Tasks</string>
    <string name="profile_settings">Profile Settings</string>
    <string name="pool_information">Pool Information</string>
    <string name="edit">Edit</string>
    <string name="type">Type:</string>
    <string name="dimensions">Dimensions:</string>
    <string name="units">Units:</string>
    <string name="parameters_to_monitor">Parameters to monitor</string>
    <string name="pH">pH</string>
    <string name="water_temperature">Water Temperature</string>
    <string name="water_quality_tds">Water Quality (TDS)</string>
    <string name="log_out">Log Out</string>
    <string name="delete_account">Delete Account</string>
    <string name="water_levell">Water Level</string>
    <string name="user_information">User information</string>
    <string name="username">Username:</string>
    <string name="email">Email:</string>
    <string name="loading">Loading...</string>
    <string name="usernamee">Username</string>
    <string name="emaill">Email</string>
    <string name="cancel">CANCEL</string>
    <string name="save">SAVE</string>
    <string name="edit_pool_information">Edit Pool Information</string>
    <string name="pool_type">Pool Type</string>
    <string name="salt">Salt</string>
    <string name="pool_dimensions">Pool Dimensions</string>
    <string name="width">Width</string>
    <string name="depth">Depth</string>
    <string name="lenght">Lenght</string>
    <string name="unitss">Units</string>
    <string name="feets_ft">Feets (ft)</string>
    <string name="meters_m">Meters (m)</string>
    <string name="pool_typee">Pool Type:</string>
    <string name="pool_dimension">Pool Dimensions:</string>
    <string name="unit">Units:</string>
    <string name="edit_pool_informations">Edit Pool Information</string>
    <string name="edit_profile_information">Edit Profile Information</string>
    <string name="chlorine_type">Chlorine Type:</string>
    <string name="tablet">Tablet</string>
    <string name="grain">Grain</string>
    <string name="liquid">Liquid</string>
    <string name="chlorine_typee">Chlorine Type</string>
    <string name="pool_health_guide">Pool Health Guide</string>
    <string name="info">INFO</string>
    <string name="my_pool">My Pool</string>
    <string name="clean_pool_filter">Clean Pool Filter</string>
    <string name="clear_skimmer_baskets">Clear Skimmer Baskets</string>
    <string name="inspect_pool_pump">Inspect Pool Pump</string>
    <string name="backarrow">BACKARROW</string>
    <string name="ph_level">pH Level:</string>
    <string name="a_balanced_ph_prevents_eye_sting_and_makes_sure_your_chemicals_actually_work_to_kill_germs">A balanced pH prevents eye sting and makes sure your chemicals actually work to kill germs.</string>
    <string name="tds_total_dissolved_solids">TDS (Total Dissolved Solids):</string>
    <string name="high_tds_makes_water_look_dull_and_creates_crusty_scale_buildup_on_your_pool_walls_make_sure_to_keep_it_below_2000_ppm">High TDS makes water look dull and creates crusty scale buildup on your pool walls. Make sure to keep it below 2000 ppm.</string>
    <string name="water_leveel">Water Level:</string>
    <string name="aim_for_the_middle_of_the_skimmer_opening_about_3_inches_below_the_edge_this_allows_the_pool_to_clean_itself_of_floating_debris_and_prevents_the_pump_from_sucking_in_air_and_burning_out">Aim for the middle of the skimmer opening (about 3 inches below the edge). This allows the pool to clean itself of floating debris and prevents the pump from sucking in air and burning out.</string>
    <string name="new_maintenance_task">New Maintenance Task</string>
    <string name="task_description">Task Description:</string>
    <string name="enter_task_description">Enter Task Description</string>
    <string name="frequency">Frequency:</string>
    <string name="day_s">Day(s)</string>
    <string name="week_s">Week(s)</string>
    <string name="month_s">Month(s)</string>
    <string name="add">ADD</string>
    <string name="edit_user_preferences">Edit User Preferences</string>
    <string name="temperaturee">Temperature:</string>
    <string name="max">max:</string>
    <string name="min">min:</string>
    <string name="depthh">Depth:</string>
    <string name="maxx">max:</string>
    <string name="minn">min:</string>
    <string name="tds">TDS:</string>
    <string name="maxxx">max:</string>
    <string name="minnn">min:</string>
    <string name="phh">pH:</string>
    <string name="maxxxx">max:</string>
    <string name="every_hour">Every Hour</string>
    <string name="once_a_day">Once a day</string>
    <string name="once_a_week">Once a week</string>
    <string name="once_a_month">Once a month</string>
    <string name="notification_history">Notification History</string>
    <string name="notification_frequency">Notification Frequency</string>
    <string name="notification_type">Notification Type</string>
    <string name="alerts">Alerts</string>
    <string name="reminders">Reminders</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="usernameee">Username</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="preferences">Preferences:</string>
    <string name="temperatureee">Temperature:</string>
    <string name="c">°C</string>
    <string name="depthhh">Depth:</string>
    <string name="m">m</string>
    <string name="tdss">TDS:</string>
    <string name="ppm">ppm</string>
    <string name="h">pH:</string>
    <string name="username_">Username</string>
    <string name="password_">Password</string>
    <string name="login_">Login</string>
    <string name="register_">Register</string>
    <string name="this_action_cannot_be_undone_and_your_data_will_be_lost">This action cannot be undone and your data will be lost.</string>
    <string name="are_you_sure_you_want_to_delete_your_account">Are you sure you want to delete your account?</string>
    <string name="delete">Delete</string>
    <string name="cancel_">Cancel</string>
</resources>