<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="370dp"
    android:layout_gravity="center"
    android:background="@drawable/dialog_rounded_bg"
    android:padding="5dp">

    <TextView
        android:id="@+id/NewTask"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/new_maintenance_task"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/name"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/NewTask"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/task_description"
        android:textSize="18sp"
        android:textStyle="bold" />
    <EditText
        android:id="@+id/taskName_txt"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/name"
        android:autofillHints=""
        android:inputType=""
        android:textSize="16sp"
        android:hint="@string/enter_task_description" />

    <TextView
        android:id="@+id/frequency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="23dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="7dp"
        android:layout_below="@+id/taskName_txt"
        android:text="@string/frequency"
        android:textSize="18sp"
        android:textStyle="bold"  />

    <TextView
        android:id="@+id/every"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="67dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="7dp"
        android:layout_below="@+id/frequency"
        android:text="Every"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_below="@id/taskName_txt"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="140dp"
        android:layout_marginTop="50dp"
        android:autofillHints=""
        android:inputType="number"
        android:textSize="16sp" />

    <RadioGroup
        android:id="@+id/freq_radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/taskName_txt"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="22dp">

        <RadioButton
            android:id="@+id/days_radiobtn"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:buttonTint="#76CCD7"
            android:checked="true"
            android:text="@string/day_s"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/weeks_radiobtn"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:buttonTint="#76CCD7"
            android:text="@string/week_s"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/months_radiobtn"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:buttonTint="#76CCD7"
            android:text="@string/month_s"
            android:textSize="16sp" />
    </RadioGroup>

    <Button
        android:id="@+id/cancelTask_btn"
        android:layout_width="117dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="44dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#CACACA"
        android:textColor="#303A38"
        android:textStyle="bold"
        android:text="@string/cancel" />

    <Button
        android:id="@+id/addTask_btn"
        android:layout_width="117dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#76CCD7"
        android:textColor="#303A38"
        android:textStyle="bold"
        android:text="@string/add" />

</RelativeLayout>