<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="285dp"
    android:layout_gravity="center"
    android:background="@drawable/dialog_rounded_bg"
    android:padding="5dp">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="false"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:text="@string/edit_profile_information"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/username_txt"
        android:layout_width="285dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="65dp"
        android:autofillHints=""
        android:hint="@string/usernamee" />

    <EditText
        android:id="@+id/email_txt"
        android:layout_width="285dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username_txt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:autofillHints=""
        android:inputType="textEmailAddress"
        android:hint="@string/emaill"/>


    <Button
        android:id="@+id/cancel_button"
        android:layout_width="117dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email_txt"
        android:layout_alignParentStart="true"
        android:layout_marginStart="38dp"
        android:layout_marginTop="25dp"
        android:backgroundTint="#CACACA"
        android:textColor="#303A38"
        android:textStyle="bold"
        android:text="@string/cancel" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="117dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email_txt"
        android:layout_alignParentStart="true"
        android:layout_marginStart="178dp"
        android:layout_marginTop="25dp"
        android:backgroundTint="#76CCD7"
        android:textColor="#303A38"
        android:textStyle="bold"
        android:text="@string/save"
        />

</RelativeLayout>